--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.class
+test-output
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -10,3 +11,43 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+target
+bin
+.project
+.classpath
+.settings
+
+sw-pom.xml
+*.iml
+test-config.xml
+.idea
+/.gradle/
+/gradle/
+*.bat
+/gradlew
+**/build/
+
+# OSX
+# Icon must end with two \r
+Icon
+
+
+._*
+.DS_Store
+.AppleDouble
+.LSOverride
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+/.sonar/
+sonar-project.properties
+
